--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,15 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  id: 1
-  name: Sarmad
-  email: sarmad@capstone.com
-  created_at: 2016-11-25 00:42:38
-  updated_at: 2016-11-25 00:42:38
-
-two:
-  id: 2
-  name: Peng
-  email: peng@capstone.com
-  created_at: 2016-11-25 00:42:38
-  updated_at: 2016-11-25 00:42:38
+# This model initially had no columns defined. If you add columns to the
+# model remove the '{}' from the fixture names and add the columns immediately
+# below each fixture, per the syntax in the comments below
+#
+one: {}
+# column: value
+#
+two: {}
+# column: value
