--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -21,7 +21,7 @@ PreCommit:
     on_warn: fail # Treat all warnings as failures
 
   Reek:
-    enabled: true
+    enabled: false
     on_warn: fail
 
   BundleCheck:
