Tutor-related tables (#34)
* Fixed README.md

* Disabled end-of-line check for rubocop

* Added bigint-pk

PK not int64 rather than int32

* Added tables

Generated the migration files for the tutor_infos, tutor_subjects, and courses tables
Removed Reek from Overcommit for now as it complains about generated migration and test files

* Added new index and tests

Added unique index to Tutor_Subjects over tutor_info_id and course_id
Removed RailsSchemaUpToDate for now because it was not detecting schema.rb

* Changed table

Changed TutorSubject to be append-only

* Fixed database cleaning

Runs a DatabaseCleaner before and after each test case

* Re-added Reek and RailsSchemaUpToDate

* Removed fixtures

--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -21,6 +21,9 @@ PreCommit:
     on_warn: fail # Treat all warnings as failures
 
   Reek:
+    exclude:
+      - '/db/migrate/*'
+      - '/test/**/**'
     enabled: true
     on_warn: fail
 
